optimize the framework code